faceboook mass unfirend and tiktok mass unfollow

--- a/popup.html
+++ b/popup.html
@@ -18,6 +18,7 @@
 <body>
   <h1>Facebook Mass Unfriend</h1>
   <button id="unfriendButton">Unfriend All</button>
+  <button id="unfollowButton">Unfollow All</button>
   <button id="stopButton">Stop Operation</button>
   <script src="popup.js"></script>
 </body>
